Update PITest configuration and  threshold settings for test strength